# user_provision_tool

./: .env.example  .gitignore  README.md  docker-compose.provision.yml  nginx.provision.conf
docs/: api-reference.md  architecture.d2  architecture.md  cli-reference.md  deployment.md  template_rendering_workflow.md  templates.md  testing.md
skills/provision-api/: SKILL.md
user_provision_tool/: Dockerfile  api.py  nginx.conf.template  pyproject.toml  requirements.txt
user_provision_tool/cli/: gen_compose_template.py  gen_nginx_template.py  rebuild.py  register.py  remove.py  status.py
user_provision_tool/lib/: auth.py  compose_converter.py  docker_ops.py  nginx_converter.py  provisioner.py  registry.py  task_manager.py  template_engine.py  validation.py  yaml_utils.py
user_provision_tool/tests/: conftest.py  mock_proxy.py  test_e2e.py  test_integration.sh  test_proxy_support.py  test_task_manager.py  test_unit.py
user_provision_tool/tests/fixtures/: docker-compose.plain.yml  docker-compose.template.yml.j2  docker-compose.user-pruser3.0.yml  myapp.plain.nginx.conf  myapp.template.nginx.conf.j2
